@@ -1,1 +1,1 @@
-DIST stylish-1.3.3-tb+fx+an+sm-linux.xpi 282174 SHA256 0b7df751c68f99785320d411b4a825baa859572edfd397c763e684a9892864ff SHA512 2a3306b02a8700960662e2db6618238e9efe5c19dd55a806dbed848cd051d7f683bceac93272bf83f73e7804e91c59d03e19861b35e6ba8ba3ccfd0f84596152 WHIRLPOOL 7db5b264de8bde057f064a728c1571a27f5c3f37a812a2f409db50142512917939e416d250118000e86c2424adcf8bef947d8449c210bf8c1f19d3e0cd26295d
+DIST stylish-1.4.0-an+fx+tb+sm-linux.xpi 290572 SHA256 7760984f5ba8bcac7038b0bb649bdc9b1372c9a4fe9084b3bbbf339ad54ffd43 SHA512 87189eff0577f0056de93329a5c9300ed869d51e8924d33088232367402a82aef54ab3ae1b9da2897bc86e0001d80e740cc2b0d06be396b208061858d777c753 WHIRLPOOL 02992686d8adfbf2d613476cc0b19f2c4b59a2e2fafc5d95b3895abe7fba494ab2fa114d2adb67ce6c126a79eb0c509a7dd33833bcb5da5f9cf7acdf685bda70
