@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*stylish-1.4.0 (16 Nov 2013)
+
+  16 Nov 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *stylish-1.3.3 (31 Aug 2013)
 
   12 Oct 2013; Martin Väth <martin@mvath.de>:
